--- a/WEB/package.json
+++ b/WEB/package.json
@@ -14,6 +14,8 @@
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "antlr4": "^4.13.1-patch-1"
+    "antlr4": "^4.13.1-patch-1",
+    "jspdf": "^2.5.1",
+    "svelte-routing": "^2.12.0"
   }
 }
