--- a/WEB/package.json
+++ b/WEB/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "npx jest"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
     "svelte": "^4.2.12",
+    "ts-jest": "^29.1.2",
     "vite": "^5.2.0"
   },
   "dependencies": {
